# MiniBar

./: CMakeLists.txt  MiniBar.kdev4
plasmoid/: metadata.json
plasmoid/contents/ui/: main.qml
src/: CMakeLists.txt  mpris.cpp  mpris.h  plugin.cpp  plugin.h  qmldir
